--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body{
-    background-color: aliceblue;
+    background-color: lightgrey;
     font-family: Georgia, 'Times New Roman';
     margin: 0;
     padding: 0;
